Endpoint reservation et Page resa
